tempfile/derive_more/tests/compile_fail/display/unclosed_brace.rs
#[derive(derive_more::Display)]
#[display("Stuff({)", bar)]
pub struct Foo {
    bar: String,
}

fn main() {}
